Package.json naming updates; README updates with demo & install details

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>MonthYearSelector</title>
+  <title>ngx-month-year-selector</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
